--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,13 @@ name = "nesulator"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [
+    ".",
+    "crates/*",
+]
 
 [dependencies]
+m6502 = { path = "./crates/m6502" }
 crossterm = "0.23"
 nom = "7.1.1"
